# Stock-Analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
.pipeline/cache/: datasets_index.json  node_signatures.json
.pipeline/cache/datasets/: Analyze_GrossMargin_Trend__GrossMargin_Trend_Result.pkl  Analyze_NetMargin_Trend__NetMargin_Trend_Result.pkl  Analyze_OCF_Trend__OCF_Trend_Result.pkl  Analyze_Profit_Trend__Profit_Trend_Result.pkl  Analyze_ROE_Trend__ROE_Trend_Result.pkl  Analyze_ROIC_Generic__ROIC_Analysis_Result.pkl  Analyze_ROIC_Trend__ROIC_Trend_Result.pkl  Analyze_ROIIC_Trend__ROIIC_Trend_Result.pkl  Analyze_Revenue_Trend__Revenue_Trend_Result.pkl  Generate_Comprehensive_Report__Comprehensive_Report_Path.pkl  Report_ROIC_Generic__ROIC_Report_Text.pkl  Score_ROIC_Generic__ROIC_Score_Result.pkl  (+1 more)
.pipeline/failures/: Load_Data.json  Load_Financial_Data.json
data/: comprehensive_analysis_report.md
data/filter_middle/: gross_margin_trend_analysis.csv  net_margin_trend_analysis.csv  ocf_trend_analysis.csv  profit_trend_analysis.csv  revenue_trend_analysis.csv  roe_trend_analysis.csv  roic_quality_report.txt  roic_quality_scored.csv  roic_trend_analysis.csv  roiic_trend_analysis.csv
data/polars/: stack_basic.csv
docs/: DEPENDENCY_GRAPH_ARCHITECTURE.md  FINAL_OPTIMIZATION_REPORT.md  OPTIMIZATION_PHASE1_REPORT.md  ORCHESTRATOR_ARCHITECTURE.md  PIPELINE_ARCHITECTURE.md  PLUGIN_DERIVER_GUIDE.md  PLUGIN_DERIVER_IMPLEMENTATION.md  README.md  REFERENCE_METRICS_CLEANUP.md  TREND_ANALYSIS_OPTIMIZATION.md  TREND_CONFIG_FLOW.md
orchestrator/: README.md  __init__.py  config.py  errors.py  models.py  orchestrator.py  protocols.py  utils_version.py
orchestrator/decorators/: __init__.py  register.py
orchestrator/registry/: __init__.py  executor.py  hooks.py  index.py  loader.py  metrics.py  registry.py  scanner.py  strategies.py
pipeline/: README.md  __init__.py  cli.py  main.py
pipeline/core/: __init__.py  context.py  dependency_graph.py  execute_manager.py
pipeline/engines/: __init__.py  kedro_engine.py  prefect_engine.py
pipeline/io/: __init__.py  io_manager.py
pipeline/plugins/: logging_plugin.py  prometheus_plugin.py
scripts/: add_quality_labels.py  analyze_changchun.py  analyze_problematic_companies.py  check_famous_companies.py  check_p0_impact.py  find_p2_additions.py  generate_industry_report.py  validate_p0.py  validate_p1.py  validate_p2.py
src/astock/: __init__.py
workflow/: duckdb_screen.yaml  generic_screen.yaml  tushare_basic.yaml  tushare_fina.yaml
(+115 files in other folders)
